syntax = "proto3";

package models;

option go_package = "";

message Profile{
    int64 ID = 1;
    int64 UserID = 2;
    string Address = 3;
    string WorkAt = 4;
    string PhoneNumber = 5;
    string Gender = 6;
    bool IsActive = 7;
    string CreatedAt = 8;
    string UpdatedAt = 9;
    string Name = 10;
    string DateOfBirth = 11;
}

message UserGetProfileArguments {
    int64 ID = 1;
    int64 UserID = 2;
    string Address = 3;
    string WorkAt = 4;
    string PhoneNumber = 5;
    string Gender = 6;
}

service Profiles {
    rpc GetProfile(UserGetProfileArguments) returns (Profile){}
}


